feat(ecosystem): v1.1.0 update - launcher, server manager, cloud sync & crash resolution